--- a/templates/parameter_edit.html
+++ b/templates/parameter_edit.html
@@ -5,14 +5,14 @@
 
     <form action="" method="post" name="parameter_edit">
       <div class="field">
-        <label for="frequency" class="label">Frequency</label>
+        <label for="input_frequency" class="label">Frequency</label>
         <div class="control">
           <input type="text" name="frequency" class="input" required="required"/>
         </div>
       </div>
 
       <div class="field">
-        <label for="power" class="label">Power</label>
+        <label for="input_Power" class="label">Power</label>
         <div class="control">
           <input type="number" name="power" class="input" required="required"/>
         </div>
@@ -20,7 +20,7 @@
 
       <div class="field is-grouped">
         <div class="control">
-          <button class="button is-primary is-small">Save</button>
+          <button class="button is-danger is-small" type="submit" name="Add" value="Add"> Add </button>
         </div>
       </div>
     </form>
